feat: final changes

--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -9,9 +9,11 @@
     "start:snippets:plain": "npm start -- --entry ./src/snippets/components-with-plain-syntax.jsx",
     "start:snippets:classes": "npm start -- --entry ./src/snippets/class-based-components.jsx",
     "start:snippets:functional": "npm start -- --entry ./src/snippets/functional-components.jsx",
+    "start:snippets:functional:internalState": "npm start -- --entry ./src/snippets/functional-components-internal-state.jsx",
+    "start:snippets:functional:externalState": "npm start -- --entry ./src/snippets/functional-components-external-state.jsx",
+    "start:snippets:functional:externalStateImproved": "npm start -- --entry ./src/snippets/functional-components-external-state-improved.jsx",
     "start:snippets:props": "npm start -- --entry ./src/snippets/communication-between-components.jsx",
     "start:snippets:componentProps": "npm start -- --entry ./src/snippets/passing-components-as-properties.jsx",
-    "start:snippets:closure": "npm start -- --entry ./src/snippets/counter-with-closure.jsx",
     "start:ecommerce:classes": "npm start -- --entry ./src/ecommerce/classes/index.jsx",
     "start:ecommerce:classes:unit": "NODE_ENV=test mocha --require @babel/register --require test.config.js --recursive ./src/ecommerce/classes/**/*.spec.js",
     "start:ecommerce:functional": "npm start -- --entry ./src/ecommerce/classes/index.jsx",
